[package]
name = "sankey-weighted-tree"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
serde = "1.0.159"
tide = "0.16.0"
rand = "0.8"
chrono-tz = "0.8.2"
chrono = "0.4.24"
